classDiagram
direction BT
class AbstractPoly {
  + AbstractPoly() 
  ~ derive() double[]
  + equals(Object) boolean
  + hashCode() int
  + toString() String
}
class ArrayPoly {
  + ArrayPoly(double[]) 
  ~ double[] coefficients
  + coefficient(int) double
  + coefficients() double[]
  + degree() int
  + derivative() Poly
}
class ListPoly {
  + ListPoly(double[]) 
  ~ ArrayList~Double~ coefficients
  + coefficient(int) double
  + coefficients() double[]
  + degree() int
  + derivative() Poly
}
class Poly {
<<Interface>>
  + coefficient(int) double
  + coefficients() double[]
  + degree() int
  + derivative() Poly
}

AbstractPoly  ..>  Poly 
ArrayPoly  -->  AbstractPoly 
ListPoly  -->  AbstractPoly 
